test/errors/discontinue_without_value_case.ml
let () =
  match%discontinue k (Invalid_argument "fail") with
  | [%effect? _] -> ()
;;